Release notes for production domapp -- jacobsen@npxdesigns.com


domapp V00-03-02  1/24/2005 CST
        Requires DOM-MB version 404
        Requires domapp.sbi tag build340

Upgrades/bug fixes:
- Software same as V00-03-01
- New FPGA fixes LC problem with 5.1 boards

=========================================================

domapp V00-03-01  1/14/2005 CST
	Requires DOM-MB version 404
	Requires domapp.sbi tag build329

Upgrades/bug fixes:
- Use new domapp FPGA which fixes LC/heartbeat interaction.
- Fix bug with extra bits contaminating FADC/ATWD data 
  (keep only 10 bits)
- Fix DSC_QUERY_PMT_HV and documentation to return only 
  2 shorts: ADC and DAC HV settings
- Rearrange engineering format code slightly to allow for
  the possibility of e.g. forced+SPE trig in the same time
  slice - in which case SPE takes precedence in format.
  I.e., if Thorsten says:        I say:
            FORCED+SPE           type 2
            FLASHER+FORCED       type 3
            FLASHER+SPE          type 3
            FLASHER+FORCED+SPE   type 3

=========================================================

domapp V00-03-00  12/23/2005
        Requires DOM-MB version 404

Upgrades/bug fixes:
- Change message recv'd code to deal w/ partial domapp
  messages being sent to DOM
- Slight refactoring of supernova code; DSC_ENABLE_SN
  message MUST occur before data taking run is started.

=========================================================

domapp V00-02-04  12/16/2005
        Requires DOM-MB version 404

Upgrades/bug fixes:
- Workaround for unexpected comms. behavior from HAL/comm.
  FPGA to deal w/ "deferred DOM response" problem

=========================================================

domapp V00-02-02  12/15/2005
        Requires DOM-MB version 404

Upgrades/bug fixes:
- Add monitoring debug message to report pulser settings when
  changed
- Use only low 8 bits to determine trigger type in events during
  formatting

=========================================================
